--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -220,6 +220,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Areas\Cabinet\CabinetAreaRegistration.cs" />
+    <Compile Include="Areas\Cabinet\Controllers\FeedbackController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\BuilderController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\ImageController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\DistrictController.cs" />
@@ -399,6 +400,10 @@
     <Content Include="Content\images\tw.png" />
     <Content Include="Content\images\vk-g.png" />
     <Content Include="Content\images\vk.png" />
+    <Content Include="Scripts\deleteFeedbacks.js" />
+    <Content Include="Scripts\deleteDistricts.js" />
+    <Content Include="Scripts\deleteBuilders.js" />
+    <Content Include="Scripts\deleteVacancies.js" />
     <Content Include="Scripts\deleteBuildings.js" />
     <Content Include="Scripts\deleteArticles.js" />
     <Content Include="Scripts\deleteAdverts.js" />
@@ -485,6 +490,21 @@
     <Content Include="Areas\Cabinet\Views\NewBuilding\Add.cshtml" />
     <Content Include="Areas\Cabinet\Views\NewBuilding\Edit.cshtml" />
     <Content Include="Areas\Cabinet\Views\NewBuilding\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Vacancy\Add.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Vacancy\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Vacancy\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Shared\Vacancy\_listOfVacancies.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Shared\Builder\_listOfBuilders.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Builder\Add.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Builder\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Builder\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\District\Add.cshtml" />
+    <Content Include="Areas\Cabinet\Views\District\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\District\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Shared\District\_listOfDistricts.cshtml" />
+    <Content Include="Areas\Cabinet\Views\FeedBack\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\FeedBack\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Shared\Feedback\_listOfFeedbacks.cshtml" />
     <None Include="Properties\PublishProfiles\wanted.pubxml" />
     <None Include="Scripts\_references.js" />
     <Content Include="Views\Shared\NewB\_listOfNewBuildings.cshtml" />
