--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -220,11 +220,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Areas\Cabinet\CabinetAreaRegistration.cs" />
-    <Compile Include="Areas\Cabinet\Controllers\FeedbackController.cs" />
-    <Compile Include="Areas\Cabinet\Controllers\BuilderController.cs" />
+    <Compile Include="Areas\Cabinet\Controllers\FeedbacksController.cs" />
+    <Compile Include="Areas\Cabinet\Controllers\BuildersController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\ImageController.cs" />
-    <Compile Include="Areas\Cabinet\Controllers\DistrictController.cs" />
-    <Compile Include="Areas\Cabinet\Controllers\VacancyController.cs" />
+    <Compile Include="Areas\Cabinet\Controllers\DistrictsController.cs" />
+    <Compile Include="Areas\Cabinet\Controllers\VacanciesController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\NewsController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\ProfileController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\NewBuildingController.cs" />
@@ -495,20 +495,20 @@
     <Content Include="Areas\Cabinet\Views\NewBuilding\Add.cshtml" />
     <Content Include="Areas\Cabinet\Views\NewBuilding\Edit.cshtml" />
     <Content Include="Areas\Cabinet\Views\NewBuilding\List.cshtml" />
-    <Content Include="Areas\Cabinet\Views\Vacancy\Add.cshtml" />
-    <Content Include="Areas\Cabinet\Views\Vacancy\Edit.cshtml" />
-    <Content Include="Areas\Cabinet\Views\Vacancy\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Vacancies\Add.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Vacancies\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Vacancies\List.cshtml" />
     <Content Include="Areas\Cabinet\Views\Shared\Vacancy\_listOfVacancies.cshtml" />
     <Content Include="Areas\Cabinet\Views\Shared\Builder\_listOfBuilders.cshtml" />
-    <Content Include="Areas\Cabinet\Views\Builder\Add.cshtml" />
-    <Content Include="Areas\Cabinet\Views\Builder\Edit.cshtml" />
-    <Content Include="Areas\Cabinet\Views\Builder\List.cshtml" />
-    <Content Include="Areas\Cabinet\Views\District\Add.cshtml" />
-    <Content Include="Areas\Cabinet\Views\District\Edit.cshtml" />
-    <Content Include="Areas\Cabinet\Views\District\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Builders\Add.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Builders\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Builders\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Districts\Add.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Districts\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Districts\List.cshtml" />
     <Content Include="Areas\Cabinet\Views\Shared\District\_listOfDistricts.cshtml" />
-    <Content Include="Areas\Cabinet\Views\FeedBack\Edit.cshtml" />
-    <Content Include="Areas\Cabinet\Views\FeedBack\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\FeedBacks\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\FeedBacks\List.cshtml" />
     <Content Include="Areas\Cabinet\Views\Shared\Feedback\_listOfFeedbacks.cshtml" />
     <Content Include="Content\fonts\open sans\open sans.ttf" />
     <None Include="Properties\PublishProfiles\wanted.pubxml" />
