--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -3,12 +3,23 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
-<configuration>
+<configuration>  
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="resizer" type="ImageResizer.ResizerSection, ImageResizer"  requirePermission="false" />
   </configSections>
+  <resizer>
+    <plugins>
+      <add name="Watermark" />
+    </plugins>
+
+    <watermarks>
+      <image name="water" path="~/content/images/watermark.png" imageQuery="filter=alpha(0.5)" align="BottomRight" />
+
+    </watermarks>
+  </resizer>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -20,7 +31,7 @@
     <customErrors mode="Off" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="30000" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
@@ -116,4 +127,5 @@
     <add name="Local" connectionString="Data Source=PC\SQLEXPRESS;Initial Catalog=ReHouse;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="smarterAsp" connectionString="Data Source=sql6001.smarterasp.net;Initial Catalog=DB_A1E43C_rehouse;User Id=DB_A1E43C_rehouse_admin;Password=rehouse123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
 </configuration>
