--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -53,6 +53,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ImageResizer, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ImageResizer.4.0.5\lib\net45\ImageResizer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ImageResizer.Plugins.Watermark, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ImageResizer.Plugins.Watermark.4.0.5\lib\net45\ImageResizer.Plugins.Watermark.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -331,6 +339,7 @@
     <Content Include="Content\images\like_hover.png" />
     <Content Include="Content\images\load.gif" />
     <Content Include="Content\images\loaded\avatars\www_131372913375655779.jpg" />
+    <Content Include="Content\images\watermark.png" />
     <Content Include="Content\images\logout.png" />
     <Content Include="Content\images\manager.jpg" />
     <Content Include="Content\images\manager.png" />
@@ -431,6 +440,7 @@
     <Content Include="Scripts\jcarousel_lite\jcarousellite_1.0.1c5.js" />
     <Content Include="Scripts\jquery.1.10.min.js" />
     <Content Include="Scripts\addtocart.js" />
+    <Content Include="Scripts\jquery.watermark.min.js" />
     <Content Include="Scripts\modules.js" />
     <Content Include="Scripts\modules.min.js" />
     <Content Include="Scripts\slides.min.jquery.js" />
