--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -16,7 +16,7 @@
     </plugins>
 
     <watermarks>
-      <image name="water" path="~/content/images/watermark.png" relativeTo="imageArea" imageQuery="s.alpha=0.2&amp;rotate=-45&amp;stretch=fill" width="500" align="MiddleCenter" />
+      <image name="water" path="~/content/images/watermark.png" relativeTo="image" align="MiddleCenter" />
 
     </watermarks>
   </resizer>
